--- a/README.Rmd
+++ b/README.Rmd
@@ -1,11 +1,11 @@
 
 ---
 output:
-  md_document:
-    variant: markdown_github
+  github_document:
+    html_preview: true
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
+<!-- README.md is generated from README.Rmd. Please edit README.Rmd (this file) -->
 
 
 ```{r, echo = FALSE}
