scarus biomass comparison

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,18 +9,19 @@ output:
 
 
 ```{r global options, echo = FALSE}
-knitr::opts_chunk$set(fig.width=12, fig.height=8, fig.path='Figs/',
+knitr::opts_chunk$set(fig.width=12, fig.height=8, #fig.path='Figs/',
+                      fig.keep = "none",
                       echo=FALSE, warning=FALSE, message=FALSE)
 ```
 
 # R-MERMAID
 A repo of useful R code for MERMAID analyses and figures. 
 
-Public dataset of underwater coral bleaching observations surveyed in the Yasawas, Ra, Ovalau and Leleuvia locations in Fiji collected between April-June 2019. Learn more about the rapid coral bleaching assessment here, [linked phrase] (www.wcs.org/coral)
+Contains a dataset of collected underwater observations from WCS and Manta Trust coral bleaching surveys from the Yasawas, Ra, Ovalau and Leleuvia in Fiji collected between April-June 2019. Learn more about the rapid coral bleaching assessment here, [linked phrase] (www.wcs.org/coral)
 
 We  plan to add more resource code to support MERMAID analysis in the future. 
 
-MERMAID data can be used to create a histogram of coral bleaching and various maps of coral bleaching reports from the dataset. All code draws on a real dataset of bleaching observations (by coral genus) downloaded from MERMAID. [link] (www.datamermaid.org)
+Exciting demo showing how the data and code produces a histogram of coral bleaching and a map of coral bleaching reports from the dataset. All code draws on a real dataset of bleaching observations (by coral genus) downloaded from MERMAID. [linked phrase] (www.datamermaid.org)
 
 ```{r load script, results = "hide", include = FALSE}
 library(here)
@@ -29,8 +30,6 @@ source(here::here("R", "bleaching-surveys", "03-bleaching-histograms.R"))
 source(here::here("R", "bleaching-surveys", "04-fiji-bleaching-map.R"))
 source(here::here("R", "bleaching-surveys", "05-fiji-bleaching-month.R"))
 ```
-
-This histogram shows bleaching observations - % colonies with some level of bleaching (pale to recently dead) - binned into four groups. 
 
 ```{r bleaching histogram, fig.height= 3, fig.width=10}
 ggplot(data = data,
@@ -48,9 +47,8 @@ ggplot(data = data,
                      limits = c(0,15))
 ```
 
-This is a map of bleaching observations using ggplot2 maps. 
 
-```{r bleaching map, fig.width=10, fig.height=5}
+```{r bleaching map, fig.width=10, fig.height=6, fig.retina=2}
 ggplot() +
   geom_polygon(data = fiji, 
                aes(x= long, y= lat, group = group)) +
@@ -71,9 +69,7 @@ ggplot() +
   ylab("Latitude")
 ```
 
-This is the same bleaching map faceted by month. 
-
-```{r bleaching map by month, fig.width=10, fig.height=5}
+```{r bleaching map by month, fig.width=5.5, fig.height=3.6, fig.retina=2}
 ggplot() +
   geom_polygon(data = fiji, 
                aes(long, lat, group = group)) +
@@ -92,7 +88,7 @@ ggplot() +
   guides(fill = guide_legend(override.aes = list(alpha = 1))) + 
   xlab("Longitude") + 
   ylab("Latitude") + 
-  facet_wrap(~month, nrow = 1)
+  facet_wrap(~month, nrow = 3)
 ```
 
 With thanks to data contributors: Stacy Jupiter (WCS Melanesia), Sangeeta Mangubhai (WCS Fiji), Emily Darling (WCS Global) and Rob Macfarlane (Barefoot Manta Resort, Fiji)
