--- a/README.Rmd
+++ b/README.Rmd
@@ -1,16 +1,16 @@
 
 ---
-output:
+output: 
   github_document:
-    html_preview: true
+  html_preview: true
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit README.Rmd (this file) -->
 
 
-```{r global options, echo = FALSE}
-knitr::opts_chunk$set(fig.width=12, fig.height=8, #fig.path='Figs/',
-                      fig.keep = "none",
+```{r globaloptions, echo = FALSE}
+knitr::opts_chunk$set(fig.width=12, fig.height=8, 
+                      fig.path='Figs/',
                       echo=FALSE, warning=FALSE, message=FALSE)
 ```
 
@@ -31,7 +31,7 @@ source(here::here("R", "bleaching-surveys", "04-fiji-bleaching-map.R"))
 source(here::here("R", "bleaching-surveys", "05-fiji-bleaching-month.R"))
 ```
 
-```{r bleaching histogram, fig.height= 3, fig.width=10}
+```{r bleachinghistogram, fig.height= 3, fig.width=10}
 ggplot(data = data,
        aes(x = floor(data$perc_bleach))) + 
   geom_histogram(aes(fill = bleach.class), 
@@ -48,7 +48,7 @@ ggplot(data = data,
 ```
 
 
-```{r bleaching map, fig.width=10, fig.height=6, fig.retina=2}
+```{r bleachingmap, fig.width=10, fig.height=6, fig.retina=2}
 ggplot() +
   geom_polygon(data = fiji, 
                aes(x= long, y= lat, group = group)) +
@@ -69,7 +69,7 @@ ggplot() +
   ylab("Latitude")
 ```
 
-```{r bleaching map by month, fig.width=5.5, fig.height=3.6, fig.retina=2}
+```{r bleaching-map-month, fig.width=5.5, fig.height=3.6, fig.retina=2}
 ggplot() +
   geom_polygon(data = fiji, 
                aes(long, lat, group = group)) +
