--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 
 ---
-output:
+output: 
   github_document:
     html_preview: true
 ---
@@ -8,20 +8,20 @@ output:
 <!-- README.md is generated from README.Rmd. Please edit README.Rmd (this file) -->
 
 
-```{r global options, echo = FALSE}
-knitr::opts_chunk$set(fig.width=12, fig.height=8, #fig.path='Figs/',
-                      fig.keep = "none",
+```{r globaloptions, echo = FALSE}
+knitr::opts_chunk$set(fig.path='Figs/',
+                      fig.align = "left",
                       echo=FALSE, warning=FALSE, message=FALSE)
 ```
 
 # R-MERMAID
 A repo of useful R code for MERMAID analyses and figures. 
 
-Contains a dataset of collected underwater observations from WCS and Manta Trust coral bleaching surveys from the Yasawas, Ra, Ovalau and Leleuvia in Fiji collected between April-June 2019. Learn more about the rapid coral bleaching assessment here, [linked phrase] (www.wcs.org/coral)
+Contains a dataset of collected underwater observations from WCS and Manta Trust coral bleaching surveys from the Yasawas, Ra, Ovalau and Leleuvia in Fiji collected between April-June 2019. Learn more about the rapid coral bleaching assessment (http://www.wcs.org/coral)
 
 We  plan to add more resource code to support MERMAID analysis in the future. 
 
-Exciting demo showing how the data and code produces a histogram of coral bleaching and a map of coral bleaching reports from the dataset. All code draws on a real dataset of bleaching observations (by coral genus) downloaded from MERMAID. [linked phrase] (www.datamermaid.org)
+Exciting demo showing how the data and code produces a histogram of coral bleaching and a map of coral bleaching reports from the dataset. All code draws on a real dataset of bleaching observations (by coral genus) downloaded from MERMAID (http://www.datamermaid.org)
 
 ```{r load script, results = "hide", include = FALSE}
 library(here)
@@ -31,7 +31,7 @@ source(here::here("R", "bleaching-surveys", "04-fiji-bleaching-map.R"))
 source(here::here("R", "bleaching-surveys", "05-fiji-bleaching-month.R"))
 ```
 
-```{r bleaching histogram, fig.height= 3, fig.width=10}
+```{r bleachinghistogram, fig.width=6, fig.height = 2.5, fig.align="center"}
 ggplot(data = data,
        aes(x = floor(data$perc_bleach))) + 
   geom_histogram(aes(fill = bleach.class), 
@@ -48,7 +48,7 @@ ggplot(data = data,
 ```
 
 
-```{r bleaching map, fig.width=10, fig.height=6, fig.retina=2}
+```{r bleachingmap, fig.width=10, fig.height=4, fig.retina=2}
 ggplot() +
   geom_polygon(data = fiji, 
                aes(x= long, y= lat, group = group)) +
@@ -69,7 +69,7 @@ ggplot() +
   ylab("Latitude")
 ```
 
-```{r bleaching map by month, fig.width=5.5, fig.height=3.6, fig.retina=2}
+```{r bleaching-map-month, fig.width=10, fig.height=3, fig.retina=2}
 ggplot() +
   geom_polygon(data = fiji, 
                aes(long, lat, group = group)) +
@@ -88,7 +88,7 @@ ggplot() +
   guides(fill = guide_legend(override.aes = list(alpha = 1))) + 
   xlab("Longitude") + 
   ylab("Latitude") + 
-  facet_wrap(~month, nrow = 3)
+  facet_wrap(~month, nrow = 1)
 ```
 
 With thanks to data contributors: Stacy Jupiter (WCS Melanesia), Sangeeta Mangubhai (WCS Fiji), Emily Darling (WCS Global) and Rob Macfarlane (Barefoot Manta Resort, Fiji)
